[package]
name = "facet-test"
version = "0.1.0"
edition = "2024"

[dependencies]
facet = { version = "0.9.7", features = ["reflect"] }
facet-pretty = "0.14.0"
facet-reflect = "0.10.4"
freya = { git = "https://github.com/marc2332/freya.git", branch = "main" }
dioxus = { version = "0.6", features = ["macro", "hooks"], default-features = false }

# optimize for size
[profile.release]
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
